Make AutofillJapanCityFieldMigrated preference non-syncable

This is a speculative fix to flakiness in
TwoClientPreferencesSyncTest.SingleClientEnabledEncryptionBothChanged_E2ETest.
https://crrev.com/c/1152068 introduced AutofillJapanCityFieldMigrated as
a syncable preference that starts out as "false" by default, but then is
flipped to "true" upon the start of syncing of autofill profiles. The
speculation is that a non-syncable preference should not interfere with
a preferences sync test.

Bug: 872614
Change-Id: I84cc91c8e11aeaba6a02ea178a5b38ebde97882a
Reviewed-on: https://chromium-review.googlesource.com/1169309
Reviewed-by: Roger McFarlane <rogerm@chromium.org>
Reviewed-by: Jan Krcal <jkrcal@chromium.org>
Commit-Queue: Rouslan Solomakhin <rouslan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#582605}
Former-commit-id: 0b370929d255471e3122bbd9ab0ecbf0cf310cb0